--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Browser extensions manager UI</title>
+  <link rel="stylesheet" href="assets/styles/main.css">
+  <link rel="stylesheet" href="assets/styles/mobile.css">
+  <link rel="stylesheet" href="assets/styles/desktop.css">
 <body>
 
   <header>
-    <div class="header-logo"></div>
+    <div class="header-logo">
+      <div class="logo-image"></div>
+      <div class="switch-light-dark"></div>
+    </div>
   </header>
 
   <main>
