Working in the style css

--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
   <header>
     <div class="header-logo">
       <div class="logo-image"></div>
-      <div class="switch-light-dark"></div>
+      <div class="switch-light-dark">
+        <div class="switch"></div>
+      </div>
     </div>
   </header>
 
   <main>
-    <div class="extension-list"></div>
+    <div class="extension-list">
+      <h1 class="list-title">Extension list</h1>
+      <div class="activate-deactivate">
+        <div class="toggles all-switch"></div>
+        <div class="toggles active-switch"></div>
+        <div class="toggles inactive-switch"></div>
+      </div>
+    </div>
 
     <div class="extensions"></div>
   </main>
