Styles of the cards.

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <img src="assets/images/logo-devlens.svg" alt="devlens">
           </div>
           <div class="extension-text">
-            <h2>DevLens</h2>
-            <p>Quickly inspect page layouts and visualize element boundaries.</p>
+            <h2 class="extension-title">DevLens</h2>
+            <p class="extension-info">Quickly inspect page layouts and visualize element boundaries.</p>
           </div>
         </div>
 
         <div class="extension-actions">
-          <button type="button">Remove</button>
+          <button type="button" class="extension-remove toggles">Remove</button>
           <label class="switch">
           <input type="checkbox">
           <span class="slider round"></span>
