Initializing the js code

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Browser extensions manager UI</title>
   <link rel="stylesheet" href="assets/styles/main.css">
-  <link rel="stylesheet" href="assets/styles/mobile.css">
-  <link rel="stylesheet" href="assets/styles/desktop.css">
+  <link rel="stylesheet" href="assets/styles/stats.css">
   <link rel="stylesheet" href="assets/styles/cards.css">
 <body>
 
@@ -24,9 +23,9 @@
     <div class="extension-list">
       <h1 class="list-title">Extension list</h1>
       <div class="activate-deactivate">
-        <div class="toggles all-switch">All</div>
-        <div class="toggles active-switch">Active</div>
-        <div class="toggles inactive-switch">Inactive</div>
+        <div class="toggles all-ext">All</div>
+        <div class="toggles active-ext">Active</div>
+        <div class="toggles inactive-ext">Inactive</div>
       </div>
     </div>
 
