Improve the js code with async/await

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="extension-actions">
           <button type="button" class="extension-remove toggles">Remove</button>
           <label class="switch">
-          <input type="checkbox">
+          <input type="checkbox" class="check-inactive-active">
           <span class="slider round"></span>
         </label>
         </div>
