Creating a function that creates elements

--- a/index.html
+++ b/index.html
@@ -29,29 +29,7 @@
       </div>
     </div>
 
-    <div class="extensions">
-
-      <div class="extension">
-        <div class="extension-content">
-          <div class="extension-favicon">
-            <img src="assets/images/logo-devlens.svg" alt="devlens">
-          </div>
-          <div class="extension-text">
-            <h2 class="extension-title">DevLens</h2>
-            <p class="extension-info">Quickly inspect page layouts and visualize element boundaries.</p>
-          </div>
-        </div>
-
-        <div class="extension-actions">
-          <button type="button" class="extension-remove toggles">Remove</button>
-          <label class="switch">
-          <input type="checkbox" class="check-inactive-active">
-          <span class="slider round"></span>
-        </label>
-        </div>
-      </div>
-
-    </div>
+    <div class="extensions"></div>
   </main>
 
   <script src="assets/script/main.js"></script>
