--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="extension-list">
       <h1 class="list-title">Extension list</h1>
       <div class="activate-deactivate">
-        <div class="toggles all-ext colors">All</div>
-        <div class="toggles active-ext colors">Active</div>
-        <div class="toggles inactive-ext colors">Inactive</div>
+        <div class="toggles colors" id="all-ext">All</div>
+        <div class="toggles colors" id="active-ext">Active</div>
+        <div class="toggles colors" id="inactive-ext">Inactive</div>
       </div>
     </div>
 
