--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     <div class="extension-list">
       <h1 class="list-title">Extension list</h1>
       <div class="activate-deactivate">
-        <div class="toggles colors" id="all-ext">All</div>
+        <!-- <div class="toggles colors" id="all-ext">All</div>
         <div class="toggles colors" id="active-ext">Active</div>
-        <div class="toggles colors" id="inactive-ext">Inactive</div>
+        <div class="toggles colors" id="inactive-ext">Inactive</div> -->
+        <button class="toggles colors" id="all-ext">All</button>
+        <button class="toggles colors" id="active-ext">Active</button>
+        <button class="toggles colors" id="inactive-ext">Inactive</button>
       </div>
     </div>
 
