Creating some functions

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <!-- <div class="toggles colors" id="all-ext">All</div>
         <div class="toggles colors" id="active-ext">Active</div>
         <div class="toggles colors" id="inactive-ext">Inactive</div> -->
-        <button class="toggles colors" id="all-ext">All</button>
-        <button class="toggles colors" id="active-ext">Active</button>
-        <button class="toggles colors" id="inactive-ext">Inactive</button>
+        <button class="toggles colors" id="all-ext" data-type="all">All</button>
+        <button class="toggles colors" id="active-ext" data-type="active">Active</button>
+        <button class="toggles colors" id="inactive-ext" data-type="inactive">Inactive</button>
       </div>
     </div>
 
