--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       
       
       </div>
-      <div class="switch-light-dark">
+      <div class="switch-dark-light switch-dark-light-change">
         <div class="switch-change"><img src="assets/images/icon-sun.svg" alt="" class="img-switch"></div>
       </div>
     </div>
