:broom: cleanup: I cleaned up all the code
I made a lot of  mistakes in this project, it's very mesy and confusing.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Browser extensions manager UI</title>
   <link rel="stylesheet" href="assets/styles/main.css">
-  <link rel="stylesheet" href="assets/styles/stats.css">
-  <link rel="stylesheet" href="assets/styles/cards.css">
+ 
 <body class="body-background">
 
   <header>
@@ -18,23 +17,23 @@
       
       
       </div>
-      <div class="switch-dark-light switch-dark-light-change">
-        <div class="switch-change"><img src="assets/images/icon-sun.svg" alt="" class="img-switch"></div>
+      <div>
+        <div><img src="assets/images/icon-sun.svg" alt="sun"></div>
       </div>
     </div>
   </header>
 
   <main>
-    <div class="extension-list">
-      <h1 class="list-title">Extension list</h1>
-      <div class="activate-deactivate">
-        <button class="toggles colors" id="all-ext" data-type="all">All</button>
-        <button class="toggles colors" id="active-ext" data-type="active">Active</button>
-        <button class="toggles colors" id="inactive-ext" data-type="inactive">Inactive</button>
+    <div>
+      <h1>Extension list</h1>
+      <div>
+        <button>All</button>
+        <button>Active</button>
+        <button>Inactive</button>
       </div>
     </div>
 
-    <div class="extensions"></div>
+    <div></div>
   </main>
 
   <script src="assets/script/main.js"></script>
