:lipstick: feat: More styles added
I added two style, one for dark and other for the main style sheet.

--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
         <div class="main-content">
           <div class="extension-icon-image"></div>
           <div class="extension-info">
-            <h2 class="extension-name"></h2>
-            <p class="extension-description"></p>
+            <h2 class="extension-name">DevLens</h2>
+            <p class="extension-description">Quickly inspect page layouts and visualize element boundaries.</p>
           </div>
         </div>
 
-        <div class="action-toggles"></div>
+        <div class="action-toggles">
+          <button>Remove</button>
+          <div></div>
+        </div>
       </div>
 
 
