:lipstick: feat: More style items
I added more styles but now in the card div.

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 
       <div class="card">
         <div class="main-content">
-          <div class="extension-icon-image"></div>
+          <div class="extension-icon-image"><img src="./assets/images/logo-devlens.svg" alt="dev-lens"></div>
           <div class="extension-info">
             <h2 class="extension-name">DevLens</h2>
             <p class="extension-description">Quickly inspect page layouts and visualize element boundaries.</p>
           </div>
         </div>
 
-        <div class="action-toggles">
-          <button>Remove</button>
+        <div class="extension-action-toggles">
+          <button class="extension-remove">Remove</button>
           <div></div>
         </div>
       </div>
