--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
     </div>
   </main>
 
-  <script src="assets/script/main.js"></script>
+  <script src="assets/scripts/main.js"></script>
 </body>
 </html>
