:arrow_up: feat: Added a new module
I did a new module to create the cards using the json file.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="extension-action-toggles">
           <button class="extension-remove">Remove</button>
-          <div></div>
+          <div class="extension-switch"></div>
         </div>
       </div>
 
