:bug: fix: Dinamic Elements Style
I fixed a problem involving the function create elements, the function was not placing the elements normally. So I fixed it.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
 
         <div class="extension-action-toggles">
           <button class="extension-remove">Remove</button>
-          <div class="extension-switch"></div>
+          <div class="extension-switch">
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+          </div>
         </div>
       </div>
 
