:lipstick: feat: Change Mode Added
I did some changes in the script to change the mode of the app to dark or light. Initially, the app will start in the dark mode.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
 
       <label for="switchdarklight" class="switch-dark-light">
-        <input type="checkbox" name="switchdarklight" class="switch-dark-light-input" checked >
+        <input type="checkbox" name="switchdarklight" class="switch-dark-light-input">
         <img src="assets/images/icon-sun.svg" alt="sun" class="image-sun">
       </label>
 
