:recycle: Making it more editable

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <div class="extension-list-actives">
       <h1 class="extension-list-title">Extension list</h1>
       <div class="extension-list-toggles">
-        <label for="All" class="identifier">All</label>
-        <input type="checkbox" name="All" id="">
-        <label for="Active" class="identifier">Active</label>
-        <input type="checkbox" name="Active" id="">
-        <label for="Inactive" class="identifier">Inactive</label>
-        <input type="checkbox" name="Inactive" id="">
+        <label for="All" class="identifier all-extensions" data-type="all">All</label>
+        <input type="checkbox" name="All">
+        <label for="Active" class="identifier active-extensions" data-type="active">Active</label>
+        <input type="checkbox" name="Active">
+        <label for="Inactive" class="identifier inactive-extensions" data-type="inactive">Inactive</label>
+        <input type="checkbox" name="Inactive">
       </div>
     </div>
 
